<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".prueba">

    <TextView
        android:id="@+id/ptvnombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre2"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/ptvtelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefono2"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/ptvemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email2"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/ptvdescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descripcion2"
        android:textSize="20sp"/>


    <Button
        android:id="@+id/btnEditarDatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_boton_Editar_Datos"
        android:onClick="editardatos"
        android:theme="@style/MiBotonRaised"
        android:layout_marginTop="5dp"/>

</LinearLayout>